<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="version">Version $version by</string>
    <string name="app_name">Bankdroid</string>
    <string name="widget_name_small">Bankdroid (Small)</string>
    <string name="widget_name_large">Bankdroid (Large)</string>
    <string name="about">About</string>
    <string name="accounts_were_not_updated">Balance for the following accounts could not be updated</string>
    <string name="updating_account_balance">Refreshing account balance...</string>
    <string name="errors_when_updating">Errors while refreshing</string>
    <string name="logging_in">Signing in...</string>
    <string name="could_not_create_account">Could not create account</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="invalid_username_password">Invalid username or password.</string>
    <string name="invalid_username">Invalid username.</string>
    <string name="invalid_card_number">Invalid card number.</string>
    <string name="invalid_bitcoin_address">Invalid bitcoin address.</string>
    <string name="unable_to_find">Unable to find</string>
    <string name="no_accounts_found">No accounts found</string>
    <string name="transparent_background">Transparent background</string>
    <string name="bank_closed">The bank is currently closed.</string>
    <string name="unable_to_login">Unable to login. Please try again later.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="custom_name">Custom Name (optional)</string>
    <string name="extras_field">Extras</string>
    <string name="bank">Bank</string>
    <string name="error_desc">The last update was unsuccessful and updates for this account have been disabled. Make sure you\'ve entered your username and password correctly and press the save button.</string>
    <string name="email">E-mail</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
	<string name="add_new_account">ADD BANK</string>
	<string name="banks_instructions">You have not added any bank accounts yet. Press the button to add a new account.</string>
	<string name="main_instructions">You have not added any bank accounts yet, press the "Accounts" button in the menu to add a new account.</string>
	<string name="refresh_balance">REFRESH</string>
	<string name="choose_an_account">Choose an account</string>
	<string name="security_and_privacy">Security and Privacy</string>
	<string name="enable_patternlock_title">Enable Pattern Lock</string>
	<string name="enable_patternlock_summary">Lock the app and widgets with a pattern lock</string>
	<string name="change_patternlock_title">Change lock pattern</string>
	<string name="change_patternlock_summary">Change your current lock pattern</string>
	<string name="blur_widget_title">Blur widget balance</string>
	<string name="blur_widget_summary">Blur the balance on the widget, click widget to unblur for a few seconds</string>
	<string name="unblur_widget_timeout_title">Unblur timeout</string>
	<string name="unblur_widget_timeout_summary">Blur the balance again after this many seconds</string>
	<string name="automatic_updates_title">Automatic Updates</string>
	<string name="autoupdates_enabled_title">Enable</string>
	<string name="autoupdates_enabled_summary">Enable automatic updates</string>
	<string name="update_frequency_title">Update frequency</string>
	<string name="update_start_title">Update start time</string>
	<string name="update_stop_title">Update end time</string>
	<string name="update_transaction_history_title">Update transaction history</string>
	<string name="update_transaction_history_summary">Update transaction history when updating automatically</string>
	<string name="number_of_notifications_title">Number of notifications</string>
	<string name="number_of_notifications_summary">Number of notifications to display simultaneously</string>
	<string name="appearance_title">Appearance</string>
	<string name="widgets_title">Widgets</string>
	<string name="round_widget_balance_title">Round widget balance</string>
	<string name="round_widget_balance_summary">Display the balance on widgets without decimals</string>
	<string name="round_balance_title">Round balance</string>
	<string name="round_balance_summary">Display the balance without decimals</string>
	<string name="notify_min_delta_title">Minimum change</string>
	<string name="notify_min_delta_summary">Only display a notification if the change is at least this big</string>
	<string name="widget_opens_transactions_title">Widget click opens transactions</string>
	<string name="widget_opens_transactions_summary">If unchecked the main screen is shown</string>
	<string name="widget_updates_transactions_title">Update transactions from widget</string>
	<string name="widget_updates_transactions_summary">Updates from widgets will update both the balance and the transaction history</string>
	<string name="notifications_title">Notifications</string>
	<string name="enable_notifications_title">Enable notifications</string>
	<string name="enable_notifications_summary">Notify on account changes</string>
	<string name="vibrate_title">Vibrate</string>
	<string name="vibrate_summary">Vibrate on account changes</string>
	<string name="led_title">Flash LED</string>
	<string name="led_summary">Flash the LED on account changes (not supported by all devices)</string>
	<string name="led_color_title">LED color</string>
   	<string name="notification_sound_title">Notification sound</string>
	<string name="notification_sound_summary">Select notification sound</string>
	<string name="notification_sound_name">Select sound</string>
	<string name="notify_delta_only_title">Display change only</string>
	<string name="notify_delta_only_summary">Don\'t display the account balance in the notification</string>
	<string name="account_types_title">Account types</string>
	<string name="account_types_summary">Only show notifications for selected account types</string>
	<string name="remote_notifier_title">Remote Notifier Integration</string>
	<string name="remote_notifier_enable_title">Enable</string>
	<string name="remote_notifier_enable_summary">Enable Remote Notifier integration</string>
	<string name="remote_notifier_help_title">What is Remote Notifier?</string>
	<string name="remote_notifier_help_summary">Read more about Remote Notifier on their website</string>
	<string name="openwatch_title">OpenWatch Integration</string>
	<string name="openwatch_enable_title">Enable</string>
	<string name="openwatch_enable_summary">Enable OpenWatch integration</string>
	<string name="openwatch_vibrate_title">Vibrate</string>
	<string name="openwatch_vibrate_summary">Vibrate the OpenWatch device</string>
	<string name="openwatch_help_title">What is OpenWatch?</string>
	<string name="openwatch_help_summary">Read more about OpenWatch on their website</string>
	<string name="liveview_title">LiveView Integration</string>
	<string name="liveview_enable_title">Enable</string>
	<string name="liveview_enable_summary">Enable Sony Ericsson LiveView integration</string>
	<string name="liveview_help_title">What is LiveView?</string>
	<string name="liveview_help_summary">Read more about LiveView on Sony Ericsson\'s website</string>
	<string name="share_data_title">Share data</string>
	<string name="share_data_enable_title">Enable data sharing</string>
	<string name="share_data_enable_summary">Grant other installed apps access to your transaction history</string>
	<string name="api_key_title">API Key</string>
	<string name="api_key_summary">Use this key to allow access for trusted applications</string>
	<string name="update_frequency">Update frequency</string>
	<string name="access_code">Access code</string>
	<string name="access_code_repeat">Repeat access code</string>
	<string name="passwords_mismatch">You\'ve entered two different access codes. Enter the same password in both password fields.</string>
	<string name="passwords_mismatch_title">Access code mismatch</string>
	<string name="pin_desc">Enter an access code if you want to password protect the application and widgets.</string>
	<string name="notify_on_change">Notify on changes</string>
	<string name="with_sound">With sound</string>
	<string name="vibrate">Vibrate</string>
	<string name="notify_account_types">Only for the following account types:</string>
	<string name="funds">Funds</string>
	<string name="ccards">Credit cards</string>
	<string name="loans">Loans</string>
	<string name="deposit_account">Deposit accounts</string>
	<string name="other">Other</string>
    <string name="login">Login</string>
    <string name="invalid_access_code">Invalid access code. Try again.</string>
    <string name="disabled">Disabled</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="daily">Daily</string>
    <string name="popup_refresh">Refresh</string>
    <string name="popup_edit">Edit</string>
    <string name="popup_www">WWW</string>
    <string name="popup_remove">Remove</string>
    <string name="popup_hide">Hide</string>
    <string name="popup_unhide">Unhide</string>
    <string name="popup_enable_notifications">Enable notifications</string>
    <string name="popup_disable_notifications">Disable notifications</string>
    <string name="remove_bank_msg">Are you sure you want to remove this bank?</string>
    <string name="remove_bank_title">Remove bank?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="menu_show_hidden">Show hidden accounts</string>
    <string name="menu_hide_hidden">Hide hidden accounts</string>
    <string name="tran_desc">No transaction history available for this account.</string>
    <string name="thanks_to">Thanks to</string>
    <string name="thanks"> 
    Wendell Fernandes (Icon)
    \nKingcool (ICA Banken &amp; SEB)
    \ngrief (Länsförsäkringar)
    \neinand (Länsförsäkringar)
    \nAnders Widén (Länsförsäkringar)
    \nHund (Handelsbanken)
    \nTravolta (Coop)
    \nDaniel Malmgren (Coop)
    \nisocron (ICA)
    \nDustin (ICA)
    \ndimaZ (Statoil)
    \nOxygen (Statoil &amp; Nordea)
	\nOzzy (Avanza)
	\nasperon (Transparent widget)
	\nDEGE (Handelsbanken)
	\ncola (OKQ8)
	\nRikko (FirstCard)
	\nNihplod (Eurocard)
	\nDaniel (Avanza)
	\nRadioman62 (Coop)
	\ns3 (Steam Wallet)
	\nVarazir (Jojo Reskassa)
	\nJohan (Länsförsäkringar)
	\nRadioman62 (Handelsbanken)
	\nLibodido (Coop)
	\ngust (Handelsbanken)
	\nbernard (Diners Club)
	\npilang (Länsförsäkringar)
	\nMidde (Ikano Bank)
	\nweppe (Coop)
	\nmagnusart (Content Provider)
	\nPMC (Rikslunchen)
	\nmhagander (Diners Club &amp; SAS EuroBonus Mastercard)
	\nfiretech (Hemköp Kundkort)
	\nebjsv (PayPal)
	\nHenrik (SEB)
	\nMicke (American Express)
	\nsjoch (Handelsbanken Finans &amp; Resurs Bank &amp; CSN)
	\nThomas (Sevenday)
	\nKalle (Nordnet)
	\ncork (Volvofinans)
	\nmarijo (Eurocard)
	\nd98rolb (Osuuspankki)
	\nAndreas Gunnerås (Everydaycard)
	\nEmil Andersson (Chalmrest)
	\Richard Ginzburg (Forex Bank)
     </string>
    <string name="patternlock_header">Draw pattern to unlock Bankdroid</string>
    <string name="lock_settings_title">Screen unlock pattern</string>
    <string name="lockpattern_change_lock_pattern_label">Change unlock pattern</string>
    <string name="lockpattern_need_to_unlock">Confirm saved pattern</string>
    <string name="lockpattern_need_to_unlock_footer"></string>
    <string name="lockpattern_need_to_unlock_wrong">Sorry, try again:</string>
    <string name="lockpattern_need_to_unlock_wrong_footer"></string>
    <string name="lockpattern_recording_intro_header">Draw an unlock pattern</string>
    <string name="lockpattern_recording_intro_footer">Press Menu for help.</string>
    <string name="lockpattern_recording_inprogress">Release finger when done.</string>
</resources>