<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/RelativeLayout01"
	android:layout_height="fill_parent"
	android:background="@drawable/background_repeat"
	android:layout_width="fill_parent">

	<ScrollView

		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:fillViewport="true" android:layout_above="@+id/TableLayout01">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:padding="10dp"
		android:background="@drawable/background_repeat">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:typeface="sans"
			android:textSize="20sp"
			android:text="@string/access_code" />
		<EditText
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:inputType="textPassword"
			android:id="@+id/edtAccessCode"></EditText>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:typeface="sans"
			android:textSize="20sp"
			android:text="@string/access_code_repeat" />
		<EditText
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:inputType="textPassword"
			android:id="@+id/edtAccessCodeRepeat"></EditText>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/txtSettingsPinDesc"
			android:text="@string/pin_desc"
			android:textSize="12sp"
			android:textColor="#A4A4A4"
			android:drawableLeft="@android:drawable/ic_dialog_info"
			android:drawablePadding="5dp"
			android:layout_marginBottom="3dp"></TextView>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:typeface="sans"
			android:textSize="20sp"
			android:text="@string/update_frequency"
			android:visibility="visible" />
		<Spinner
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:id="@+id/spnUpdateFrequency"
			android:visibility="visible"></Spinner>





		<LinearLayout
			android:id="@+id/LinearLayout01"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:paddingLeft="10dp">
			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/notify_on_change"
				android:id="@+id/chkNotifyOnChange"
				android:visibility="visible"></CheckBox>
			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/with_sound"
				android:id="@+id/chkWithSound"
				android:textSize="14sp"
				android:layout_marginLeft="10dp"></CheckBox>
			<CheckBox
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="14sp"
				android:id="@+id/chkWithVibration"
				android:text="@string/vibrate"
				android:layout_marginLeft="10dp"></CheckBox>
		</LinearLayout>
		
	</LinearLayout>
	</ScrollView>
	<TableLayout
		android:id="@+id/TableLayout01"
		android:stretchColumns="0,2"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_width="wrap_content"
		android:layout_below="@+id/LinearLayout01"
		android:gravity="bottom">
		<TableRow
			android:id="@+id/TableRow01"
			android:layout_height="wrap_content"
			android:gravity="center_vertical|center_horizontal"
			android:layout_gravity="center_vertical|center_horizontal"
			android:layout_width="fill_parent">
			<Button
				android:text="@string/cancel"
				android:drawableLeft="@drawable/button_cancel"
				android:id="@+id/btnSettingsCancel"
				style="@style/Menu_Button"></Button>
			<ImageView
				android:layout_height="wrap_content"
				android:focusable="false"
				android:src="@drawable/menu_separator"
				android:adjustViewBounds="true"
				android:scaleType="fitXY"
				android:minWidth="3dp"
				android:maxWidth="3dp"
				android:layout_width="wrap_content"></ImageView>
			<Button
				android:id="@+id/btnSettingsOk"
				android:drawableLeft="@drawable/button_save"
				android:text="@string/save"
				style="@style/Menu_Button"></Button>
		</TableRow>
	</TableLayout>
</RelativeLayout>