<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:paddingBottom="20dp">
	<ScrollView
		android:fillViewport="true"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_weight="1">
		<LinearLayout
			android:id="@+id/LinearLayout03"
			android:orientation="vertical"
			android:layout_height="fill_parent"
			android:layout_width="wrap_content"
			android:paddingLeft="20dp"
			android:paddingRight="20dp">
			<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_marginBottom="20dp">
			<ImageView
				android:layout_height="wrap_content"
				android:src="@drawable/logo_text_big"
				android:adjustViewBounds="true"
				android:layout_width="fill_parent"
				android:scaleType="fitXY"
				android:id="@+id/imgTextLogo"
				android:layout_marginTop="20dp"></ImageView>
			<ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/imgTextLogo" android:id="@+id/imgNullbyteLogo" android:src="@drawable/nullbyte_logo" android:layout_alignRight="@+id/imgTextLogo" android:layout_alignBottom="@+id/txtVersion"></ImageView>
			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/txtVersion" android:text="@string/version" android:textSize="15dp" android:layout_below="@+id/imgTextLogo" android:gravity="right" android:textColor="#78ffffff" android:layout_toLeftOf="@+id/imgNullbyteLogo" android:layout_marginRight="4dp"></TextView>
</RelativeLayout>
			<TextView
				android:id="@+id/TextView04"
				android:layout_height="wrap_content"
				android:text="@string/thanks_to"
				android:textStyle="bold"
				android:layout_marginTop="10dp"
				android:layout_width="fill_parent" android:textSize="20dp"></TextView>
			<TextView
				android:id="@+id/TextView03"
				android:layout_height="wrap_content"
				android:text="@string/thanks"
				android:layout_width="fill_parent"
				android:paddingLeft="10dp"
				android:typeface="serif"
				android:textSize="12sp" android:layout_marginBottom="10dp"></TextView>

		</LinearLayout>













	</ScrollView>

</LinearLayout>
